Ya se muestra el mapa

--- a/www/index.html
+++ b/www/index.html
@@ -18,7 +18,7 @@
 	<!-- leaflet JS -->
 	<script src="lib/leaflet/leaflet.js"></script>
 	<script src="lib/leaflet/angular-leaflet-directive.min.js"></script>
-
+	<script src="lib/ng-cordova.min.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
