Imagenes para iconos, splash, etc

--- a/www/index.html
+++ b/www/index.html
@@ -7,6 +7,7 @@
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/leaflet.css" />
+	<link rel="stylesheet" href="css/leaflet.markercluster.js.css" />
     <link href="css/style.css" rel="stylesheet">
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
@@ -17,6 +18,7 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 	<!-- leaflet JS -->
 	<script src="lib/leaflet/leaflet.js"></script>
+	<script src="lib/leaflet/leaflet.markercluster.js.js"></script>
 	<script src="lib/leaflet/angular-leaflet-directive.min.js"></script>
 	<script src="lib/ng-cordova.min.js"></script>
 
